# mdxera-offline

./: App.tsx  PROJECT.md  RELEASING.md  SYNC_AUDIT.md  add_material_valuation_fields.sql  fix_app.cjs  fix_app_hang.cjs  fix_await.cjs  fix_getData.cjs  fix_invoice_total.cjs  fix_match.cjs  fix_physical.cjs  fix_supabase_query.cjs  fix_supp.cjs  fix_syncengine.cjs  index.css  index.html  index.tsx  package-lock.json  package.json  rewrite_getData.cjs  tsconfig.json  types.ts  update_fetches.cjs  update_imports.cjs  update_imports.js  update_loaddata.cjs  vite.config.ts  vitest.config.ts
components/: AddMedicineModal.tsx  EditMedicineModal.tsx  POS.tsx  PrintBillModal.tsx  PurchaseForm.tsx
pages/: Configuration.tsx  ManualSalesEntry.tsx  MbcCardManagement.tsx  POS.tsx  Purchase.tsx  Reports.tsx
services/: companyDefaultsService.ts  geminiService.ts  storageService.ts  supplierService.ts  whatsappService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: system.rs
supabase/: add_assigned_roles_to_team_members.sql  add_customer_address_to_sales_bill.sql  add_permissions_matrix_to_business_roles.sql  bank_master_linked_gl_update.sql  business_roles_schema.sql  company_configuration_schema.sql  configurations_setup.sql  configure_invoices_storage_rls.sql  create_customer_outstanding_view.sql  customer_price_master_migration.sql  database_schema.sql  database_updates.sql  fix_delivery_challans_id_column.sql  fix_gl_assignment_trigger.sql  info_sql.txt  (+12 more)
(+141 files in other folders)
