[package]
name = "mdxera-erp"
version = "1.1.15"
description = "MDXera ERP - Pharmacy Management System"
authors = []
edition = "2021"

[package.metadata.bundle]
identifier = "com.mdxera.erp"
icon = ["icons/icon.ico", "icons/icon.icns", "icons/128x128.png", "icons/128x128@2x.png", "icons/32x32.png"]

[lib]
name = "mdxera_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdxera-erp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
